[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies", "blocking"] }
tokio-macros = "2.3.0"
serde_json = "1.0.119"
serde = { version = "1.0.203", features = ["derive"] }
